# bobaquiz

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
app/: settings.py
app/admin/: main.py  utils.py
app/admin/extensions/: login.py
app/admin/views/: admin.py
app/api/: main.py
app/api/di/: __init__.py  stubs.py
app/api/di/providers/: auth.py  db.py
app/api/routes/: router.py
app/api/routes/v1/: auth.py
app/api/schemas/: users.py
app/core/quiz/dto/: __init__.py  ans_option.py  question.py  quiz.py  quiz_answer.py
app/core/quiz/entity/: __init__.py  ans_option.py  question.py  quiz.py
app/core/quiz/exceptions/: __init__.py  quiz.py
app/core/quiz/protocols/: dao.py
app/core/solution/entity/: __init__.py  ans_option.py  question.py  quiz.py
app/core/solution/protocols/: dao.py
app/core/user/dto/: __init__.py  auth.py  user.py
app/core/user/entities/: __init__.py  user.py
app/infrastructure/: mediator.py
app/infrastructure/db/: factory.py  mapping.py
app/interfaces/admin/: main.py  utils.py
app/interfaces/api/: main.py
app/services/: manager.py
app/shared/: __init__.py  command_handler.py  dao.py  entity.py  event_emitter.py  event_handler.py  exception.py  mediator.py
deploy/: .env.example  Dockerfile  alembic.ini  docker-compose.yml
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 2ddee8602a03_init.py
src/admin/: utils.py
src/admin/extensions/: __init__.py  database.py  login.py
src/admin/forms/: login.py
src/admin/views/: admin.py  base.py  quiz.py
src/api/: router.py
src/app/: admin.py  app.py
src/core/: settings.py
src/core/di/: setup.py
src/db/: session.py  stubs.py
src/db/migrations/: env.py
src/db/models/: __init__.py  base.py  quiz.py  user.py
src/routes/: router.py
src/routes/v1/: auth.py  info.py
src/schemas/: quiz.py  users.py
src/services/: manager.py
(+74 files in other folders)
